fixed icon alignment

--- a/cfg/themes/roar/static/roar_template/Styles/summary.css
+++ b/cfg/themes/roar/static/roar_template/Styles/summary.css
@@ -160,7 +160,8 @@ padding-left: 10px;
 }
 
 .panel-body i, .ep_doc_icon {
-float: right;
+//float: right;
+margin-left: 25%;
 }
 
 #summary_links .panel-body p {
